# iLayer-bot

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml.example  diesel.toml  docker-compose.yml  example.env
.github/workflows/: rust.yaml
abi/: Counter.json  Orderbook.abi.json
bot_solidity/: Cargo.toml
bot_solidity/abi/: OrderHub.abi.json
bot_solidity/src/: lib.rs
docker/: redis.conf
docker/redis/: redis.conf  users.acl
docker/redis/scripts/: setup.sh  setup_indexes.lua
entity/: Cargo.toml  README.md
entity/src/: block_checkpoint.rs  lib.rs  order.rs  prelude.rs  sea_orm_active_enums.rs
migration/src/: lib.rs  m20250101_000001_create_order.rs  m20250101_000002_create_block_checkpoint.rs  m20250101_000003_create_order_status_enum_and_column.rs
migrations/2024-12-25-202210_create_orders_and_processed_blocks/: down.sql  up.sql
scripts/: paraswap.sh
src/: main.rs  models.rs  schema.rs  service.rs
src/client/: redis.rs
src/context/: mod.rs
src/dao/: mod.rs  models.rs  redis.rs
src/dao/sql/: mod.rs
src/filler/: mod.rs
src/listener/: log.rs  mod.rs
src/orm/: models.rs  schema.rs
src/repository/: block_checkpoint.rs  mod.rs  order.rs
src/repository/sql/: mod.rs
src/solidity/: mod.rs
src/watcher/: mod.rs
src/worker/: filler.rs  log.rs  mod.rs  process.rs  redis.rs  solidity.rs
