[package]
name = "equito_bot"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[workspace]
members = [".", "entity", "migration", "bot_solidity"]

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.9.2", features = ["full"] }
config = "0.15.4"
dotenv = "0.15.0"
eyre = "0.6.12"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
hex = "0.4.3"
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "macros",
] }
entity = { path = "./entity" }
bot_solidity = { path = "./bot_solidity" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
redis = { version = "0.28.1", features = ["aio", "tokio-comp"] }
