[package]
name = "bot_solidity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "bot_solidity"
path = "src/lib.rs"

[dependencies]
alloy = { version = "0.9.2", features = ["full"] }
entity = { path = "../entity" }
sea-orm = { version = "1.1.4", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "debug-print",
  "macros",
] }
eyre = "0.6.12"
chrono = { version = "0.4.39", features = ["serde"] }
